[package]
name = "birdbot-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
tracing = "0.1"
rand = "0.9"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
chrono = "0.4"
diesel_migrations = "2.2"
serde = "1.0"
rosu-v2 = { git = "https://github.com/MaxOhn/rosu-v2", rev = "1f3cd8555bea76aa5de32e846a81afaefb95464f", features = ["metrics"] }
num-format = "0.4"
time = "0.3"
dashmap = "7.0.0-rc2"
rosu-pp = "3.0"
regex = "1.11"
url = "2.5"
diesel = { version = "2.2", features = ["chrono"] }
diesel-async = { version = "0.5", features = ["postgres", "mobc", "async-connection-wrapper"] }
mobc = "0.8"
markov = "1.1"
tokio-stream = "0.1"
par-stream = { version = "0.10", features = ["runtime-tokio"] }
tikv-jemallocator = "0.6"
itertools = "0.14"
resvg = "0.45"
svg = "0.18"
base64 = "0.22"
color_space = "0.5"
image = "0.25"
serde_json = "1.0"
aformat = "0.1"
to-arraystring = { version = "0.2", features = ["nonzero_impls"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
metrics-exporter-prometheus = "0.17"
rustls = "0.23"

[dependencies.tokio]
version = "1.45"
features = ["full"]

[dependencies.reqwest]
version = "0.12"
default-features=false
features = ["rustls-tls", "zstd", "brotli", "gzip", "deflate", "http2"]

[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
rev = "248647a906e318d463f11cf0624e01ef893d2233"

[dependencies.symphonia]
version = "0.5"
features = ["all-codecs"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
rev = "874160875559d47743a1579f8c9dce2efa83dc25"
features = ["builtin-queue"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
default-features = false
features = ["builder", "framework", "cache", "gateway", "http", "model", "utils", "rustls_backend", "voice",
    "transport_compression_zlib", "transport_compression_zstd"]

[profile.dev]
lto = "off"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"

[profile.release.build-override]
opt-level = 3
[profile.release.package."*"]
opt-level = 3

