[package]
name = "birdbot-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
tracing = "0.1"
rand = "0.9"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
chrono = "0.4"
diesel_migrations = "2.3"
serde = "1.0"
rosu-v2 = { git = "https://github.com/MaxOhn/rosu-v2", rev = "a5c8b58d4db3c1d090d68c2ea903511bda538bad", features = ["metrics"] }
num-format = "0.4"
time = "0.3"
dashmap = "7.0.0-rc2"
rosu-pp = "3.1"
regex = "1.12"
url = "2.5"
diesel = { version = "2.3", features = ["chrono"] }
diesel-async = { version = "0.7", features = ["postgres", "mobc", "migrations"] }
mobc = "0.9"
markov = "1.1"
tokio-stream = "0.1"
par-stream = { version = "0.10", features = ["runtime-tokio"] }
itertools = "0.14"
resvg = "0.45"
svg = "0.18"
base64 = "0.22"
color_space = "0.5"
image = "0.25"
serde_json = "1.0"
aformat = "0.1"
to-arraystring = { version = "0.2", features = ["nonzero_impls"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
metrics-exporter-prometheus = "0.18"
rustls = "0.23"
foldhash = "0.2"

[dependencies.tokio]
version = "1.48"
features = ["full"]

[dependencies.reqwest]
version = "0.12"
default-features=false
features = ["rustls-tls", "zstd", "brotli", "gzip", "deflate", "http2"]

[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
rev = "fe2f25097166e1e7fb56f341cbad9a2bc771a931"

[dependencies.symphonia]
version = "0.5"
features = ["all-codecs"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
rev = "874160875559d47743a1579f8c9dce2efa83dc25"
features = ["builtin-queue"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
default-features = false
features = ["builder", "framework", "cache", "gateway", "http", "model", "utils", "rustls_backend", "voice",
    "transport_compression_zlib", "transport_compression_zstd"]


[profile.dev]
lto = "off"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"

[profile.release.build-override]
opt-level = 3
[profile.release.package."*"]
opt-level = 3

