[package]
name = "entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "entities"
path = "src/lib.rs"

[dependencies]
serde = {version = "^1"}

[dependencies.sea-orm]
version = "0.9" # sea-orm version