[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies.sea-orm-migration]
version = "0.9" # sea-orm-migration version
features = [
    # Enable following runtime and db backend features if you want to run migration via CLI
    "runtime-tokio-rustls",
    "sqlx-sqlite",
]